--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ShubhamKamble1999/portfolio",
+  "homepage": "https://shubhamkamble1999.github.io/portfolio/",
   "name": "myportfolio",
   "private": true,
   "version": "0.0.0",
